# another-satisfactory-calculator

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: db.rs  main.rs  state.rs
backend/src/middleware/: user_id.rs
backend/src/models/: factory.rs  game_data.rs  mod.rs  solver_io.rs
backend/src/routes/: factories.rs  game_data.rs  mod.rs  shares.rs  solver.rs
backend/src/solver/: engine.rs  graph.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  factories.ts  gameData.ts  shares.ts  solver.ts
frontend/src/components/: BootSequence.tsx  FactoryDropdown.tsx  GuestModeOverlay.tsx  KeyboardHelp.tsx  Layout.tsx  Modal.tsx  ShareButton.tsx  StatusBar.tsx  Toast.tsx  Toolbar.tsx  Tooltip.tsx
frontend/src/components/graph/: FactoryGraph.tsx  GeneratorNode.tsx  InputNode.tsx  OutputNode.tsx  RecipeNode.tsx  ResourceNode.tsx
frontend/src/components/panels/: InputPanel.tsx  ModeToggle.tsx  OptimizationPanel.tsx  PowerConfigPanel.tsx  RecipePanel.tsx  ResourceConstraintPanel.tsx  SaveLoadPanel.tsx  SettingsPanel.tsx  SummaryPanel.tsx  TargetPanel.tsx
frontend/src/hooks/: useSharePolling.ts
frontend/src/stores/: useFactoryStore.ts  useToastStore.ts
frontend/src/types/: factory.ts  gameData.ts  solver.ts
frontend/src/utils/: formatting.ts  layoutGraph.ts  mining.ts
